samples/_failures_safe/1761286479_ecc9fa_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4ea68f45.c: In function ‘tokenize’:
./samples/SAFE/__tmp_4ea68f45.c:157:9: error: expected declaration or statement at end of input
  157 |         tokens[token_count].line = line;
      |         ^~~~~~
./samples/SAFE/__tmp_4ea68f45.c:157:9: error: expected declaration or statement at end of input
